force-app/main/default/objects/hud_Name__c.object
<CustomObject>
    <label>hud_Name</label>
    <nameField>
        <displayFormat>HNM-{00000000}</displayFormat>
        <label>Name ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>hud_Names</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>EFFDT__c</fullName>
        <label>EFFDT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EFF_STATUS__c</fullName>
        <label>EFF_STATUS</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>INTERNAL_ID__c</fullName>
        <externalId>true</externalId>
        <label>INTERNAL_ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MULE_UNIQUE_PERSON_KEY__c</fullName>
        <externalId>true</externalId>
        <label>MULE_UNIQUE_PERSON_KEY</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAME_FIRST__c</fullName>
        <label>NAME_FIRST</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAME_LAST__c</fullName>
        <label>NAME_LAST</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAME_MIDDLE__c</fullName>
        <label>NAME_MIDDLE</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAME_PREFIX__c</fullName>
        <label>NAME_PREFIX</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAME_SUFFIX__c</fullName>
        <label>NAME_SUFFIX</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAME_TYPE__c</fullName>
        <label>NAME_TYPE</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Hud_Names</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PERSON_NAMES_KEY__c</fullName>
        <externalId>true</externalId>
        <label>PERSON_NAMES_KEY</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UNIV_ID__c</fullName>
        <externalId>true</externalId>
        <label>UNIV_ID</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPDATE_BY__c</fullName>
        <label>UPDATE_BY</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UPDATE_DT__c</fullName>
        <label>UPDATE_DT</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UPDATE_SOURCE__c</fullName>
        <label>UPDATE_SOURCE</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>MULE_UNIQUE_PERSON_KEY__c</columns>
        <columns>UNIV_ID__c</columns>
        <columns>Name_Contact__c</columns>
        <columns>PERSON_NAMES_KEY__c</columns>
        <columns>NAME_PREFIX__c</columns>
        <columns>NAME_SUFFIX__c</columns>
        <columns>NAME_TYPE__c</columns>
        <columns>NAME_FIRST__c</columns>
        <columns>NAME_LAST__c</columns>
        <columns>NAME_MIDDLE__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>