force-app/main/default/objects/hud_Name__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MULE_UNIQUE_PERSON_KEY__c</columns>
    <columns>UNIV_ID__c</columns>
    <columns>Name_Contact__c</columns>
    <columns>PERSON_NAMES_KEY__c</columns>
    <columns>NAME_PREFIX__c</columns>
    <columns>NAME_SUFFIX__c</columns>
    <columns>NAME_TYPE__c</columns>
    <columns>NAME_FIRST__c</columns>
    <columns>NAME_LAST__c</columns>
    <columns>NAME_MIDDLE__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>